test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/validation/auth-check/cpol-standard-auth-check(deprecated)/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-mutate-existing-auth-check
spec:
  mutateExistingOnPolicyUpdate: true
  background: false
  rules:
  - name: label-privileged-namespaces
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      targets:
        - apiVersion: v1
          kind: ServiceAccount
      patchStrategicMerge:
        metadata:
          labels:
            foo: bar
